<resources>
    <string name="app_name">REPERTORIO CLAVE DEI</string>

    <!--    Main activity strings -->
    <string name="main_title">ELIGE UNA OPCION</string>
    <string name="button_searchSongs">Buscar Canciones</string>
    <string name="button_searchSongsbyParts">Ver Catalogo por Partes</string>
    <string name="button_searchSongsbySeasons">Ver Catalogo por Tiempos</string>
    <string name="button_createSong">Agregar Cancion</string>
    <string name="button_goList">Ver mis listas</string>

    <!--  Toast messages  -->
    <string name="toast_song_updated">Cancion Actualizada!</string>
    <string name="toast_song_created">Cancion Registrada!</string>
    <string name="toast_song_deleted">Cancion Eliminada</string>

    <!--  Buscar canciones  -->
    <string name="searchSongs_title">LISTADO DE CANCIONES</string>
    <string name="searchSongs_searchBarHint">Buscar canciones</string>

    <!--  Editar canciones   -->
    <string name="createSongs_title">REGISTRO DE CANCION</string>
    <string name="txtHint_songID">ID</string>
    <string name="txtHint_songTitle">Titulo</string>
    <string name="txtHint_songArtist">Artista</string>
    <string name="txtHint_songLyrics">Letra</string>
    <string name="txtHint_songTags">Tags</string>
    <string name="button_addSong">AGREGAR</string>
    <string name="button_updateSong">ACTUALIZAR</string>
    <string name="button_deleteSong">ELIMINAR</string>


    <!--    Buscar canciones por Tiempos / bySeasons -->
    <string name="searchSongsbySeason_title">ELIGE UN TIEMPO</string>
    <string name="button_OrdinaryTime">Tiempo Ordinario</string>
    <string name="button_LentTime">Cuaresma</string>
    <string name="button_EasterTime">Pascua de Resurreccion</string>
    <string name="button_PentecostTime">Pentecostes</string>
    <string name="button_AdventTime">Adviento</string>
    <string name="button_ChristmasTime">Navidad</string>

    <!--    Buscar canciones por Partes / byParts -->
    <string name="searchSongsbyParts_title">ELIGE UN MOMENTO DE LA MISA</string>
    <string name="button_EntrancePart">Entrada</string>
    <string name="button_MercyPart">Piedad</string>
    <string name="button_GloryPart">Gloria</string>
    <string name="button_SalmPart">Salmo</string>
    <string name="button_AlelluiaPart">Proclamacion</string>
    <string name="button_OffertoryPart">Ofertorio</string>
    <string name="button_PeacePart">Paz</string>
    <string name="button_LambGodPart">Cordero</string>
    <string name="button_CommunionPart">Comunion</string>
    <string name="button_PostCommunionPart">PostComunion</string>
    <string name="button_ExitPart">Salida</string>


    <!--  Editar mi lista  -->
    <string name="edit_listName">Asigna un nombre de lista</string>
    <string name="add_toList">Agregar a lista</string>
    <string name="readLists_title">MIS LISTAS</string>
<!--    -->
    <string name="add_toFavs">Agregar a Favoritos</string>
    <string name="increase_Tone">Subir tono</string>
    <string name="edit_song">Editar</string>
    <string name="delete_song">Eliminar</string>
    <string name="viewSongTitle">Titulo Cancion</string>
    <string name="songActionsTitle">Elige una opcion</string>
    <string name="listName">Nombre de Lista</string>
    <string name="listQtySongs">Cant.</string>
    <string name="unable_to_delete_this_song">No se pudo eliminar esta cancion porque pertenece a una Lista</string>
    <string name="choose_list_to_add_song">Elige la lista donde deseas guardar</string>
    <string name="save_text">GUARDAR</string>
    <string name="SongIcon">Icono de cancion</string>
    <string name="songAddedToList">"Agregada a la Lista "</string>

</resources>
