<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchSongsBySeasonsActivity">

    <TextView
        android:id="@+id/searchSongsbySeasonsTitleTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/searchSongsbySeason_title"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/s1_Ordinario_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/s1_Ordinario_btn"
        android:background="@drawable/round_shape_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:layout_marginBottom="29dp"
        android:text="@string/button_OrdinaryTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/s2_Adviento_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/s2_Adviento_btn"
        android:background="@drawable/round_shape_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/button_AdventTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/s3_Navidad_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1_Ordinario_btn" />

    <Button
        android:id="@+id/s3_Navidad_btn"
        android:background="@drawable/round_shape_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_ChristmasTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/s4_Cuaresma_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2_Adviento_btn" />

    <Button
        android:id="@+id/s4_Cuaresma_btn"
        android:background="@drawable/round_shape_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/button_LentTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/s5_Pascua_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s3_Navidad_btn" />

    <Button
        android:id="@+id/s5_Pascua_btn"
        android:background="@drawable/round_shape_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_EasterTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/s6_Pentecostes_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s4_Cuaresma_btn" />

    <Button
        android:id="@+id/s6_Pentecostes_btn"
        android:background="@drawable/round_shape_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/button_PentecostTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s5_Pascua_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
